WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313625
[WebXR Layers][OpenXR] WebKit crashes in immersiveweb's quad-ab-test.html
https://bugs.webkit.org/show_bug.cgi?id=313625
Summary
[WebXR Layers][OpenXR] WebKit crashes in immersiveweb's quad-ab-test.html
Sergio Villar Senin
Reported
2026-04-29 01:10:03 PDT
This affects the ports using OpenXR, we're getting crashes in that webxr sample which compares the rendering of a picture using a quad layer and when embedded in the projection layer. The crash is caused by a mismatch between the acquireImage and releaseImage calls to OpenXR
Attachments
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2026-04-29 04:56:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63885
EWS
Comment 2
2026-05-01 03:40:56 PDT
Committed
312422@main
(e5dac2f2642f): <
https://commits.webkit.org/312422@main
> Reviewed commits have been landed. Closing PR #63885 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-05-01 03:41:12 PDT
<
rdar://problem/176010815
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug